--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snj-project",
+  "name": "palpal",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,8 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "i": "^0.3.7",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.22"
+    "mysql2": "^3.4.1",
+    "sequelize": "^6.32.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22",
+    "sequelize-cli": "^6.6.1"
   }
 }
