--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "mysql2": "^3.4.1",
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.4.2",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
